--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
         "terminal.integrated.defaultProfile.linux#": "/bin/bash",
         "sqltools.connections": [
             {
-                "name": "Container database",
+                "name": "Database",
                 "driver": "PostgreSQL",
                 "previewLimit": 50,
                 "server": "localhost",
@@ -21,33 +21,23 @@
         ],
         "python.pythonPath": "/usr/local/bin/python",
         "python.languageServer": "Pylance",
-        "python.linting.enabled": true,
-        "python.linting.pylintEnabled": true,
-        "python.formatting.autopep8Path": "/usr/local/py-utils/bin/autopep8",
-        "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
-        "python.formatting.yapfPath": "/usr/local/py-utils/bin/yapf",
-        "python.linting.banditPath": "/usr/local/py-utils/bin/bandit",
-        "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
-        "python.linting.mypyPath": "/usr/local/py-utils/bin/mypy",
-        "python.linting.pycodestylePath": "/usr/local/py-utils/bin/pycodestyle",
-        "python.linting.pydocstylePath": "/usr/local/py-utils/bin/pydocstyle",
-        "python.linting.pylintPath": "/usr/local/py-utils/bin/pylint",
-        "python.testing.pytestPath": "/usr/local/py-utils/bin/pytest"
+        "files.associations": {
+            "*.sql": "jinja-sql"
+        }
     },
-    // Add the IDs of extensions you want installed when the container is created.
     "extensions": [
+        "bastienboutonnet.vscode-dbt",
+        "dorzey.vscode-sqlfluff",
+        "editorconfig.editorconfig",
+        "innoverio.vscode-dbt-power-user",
+        "ms-azuretools.vscode-docker",
         "ms-python.python",
         "ms-python.vscode-pylance",
-        "mtxr.sqltools",
         "mtxr.sqltools-driver-pg",
-        "ms-azuretools.vscode-docker",
-        "innoverio.vscode-dbt-power-user",
-        "bastienboutonnet.vscode-dbt"
+        "mtxr.sqltools",
+        "redhat.vscode-yaml",
+        "samuelcolvin.jinjahtml"
     ],
-    // Use 'forwardPorts' to make a list of ports inside the container available locally.
-    // "forwardPorts": [5000, 5432],
-    // Use 'postCreateCommand' to run commands after the container is created.
-    // "postCreateCommand": "pip install --user -r requirements.txt",
-    // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
+    "initializeCommand": "git submodule update --init",
     "remoteUser": "vscode"
 }
