--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -33,6 +33,7 @@
         "ms-azuretools.vscode-docker",
         "ms-python.python",
         "ms-python.vscode-pylance",
+        "eamodio.gitlens",
         "mtxr.sqltools-driver-pg",
         "mtxr.sqltools",
         "redhat.vscode-yaml",
