--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,22 +21,18 @@ services:
 
     # Uncomment the next line to use a non-root user for all processes.
     user: vscode
-
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
   db:
-    image: postgres:latest
-    restart: unless-stopped
+    image: postgres:14.2
+    restart: always
     volumes:
       - postgres-data:/var/lib/postgresql/data
     environment:
       POSTGRES_USER: postgres
       POSTGRES_DB: postgres
       POSTGRES_PASSWORD: postgres
-
-    # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
 
 volumes:
   postgres-data:
